<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐商务</string>
    <string name="le">乐自由我</string>
    <string name="rc">乐遥控</string>
    <string name="push">乐推屏</string>
    <string name="user">乐会员</string>
    <string name="more">乐更多</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="cannel">频道</string>
    <string name="voice">声音</string>
    <string name="mouse_keyboard">鼠标键盘</string>
    <string name="tab_common">常用</string>
    <string name="tab_image">图片</string>
    <string name="tab_music">音乐</string>
    <string name="tab_video">视频</string>
    <string name="tab_cloud">云资源</string>
    <string name="set_common">设为常用？</string>
    <string name="cancel_common">取消常用？</string>
    <string name="setting_success">设置成功！</string>
    <string name="setting_failed">设置失败！</string>
    <string name="isacommon">已经是常用！</string>
    <string name="loading">加载中...</string>
    <string name="tab_setting_scan">乐扫扫</string>
    <string name="tab_setting_shake">乐摇摇</string>
    <string name="tab_setting_game">乐游戏</string>
    <string name="tab_setting_fiance">乐理财</string>
    <string name="setting">设置</string>
    <string name="setting_rc">乐遥控设置</string>
    <string name="setting_push">乐推送设置</string>
    <string name="setting_shake">乐摇摇设置</string>
    <string name="setting_logout">退出</string>
    <string name="setting_connect">连接机顶盒</string>
    <string name="setting_scan">扫描二维码连接机顶盒</string>
    <string name="setting_auto_scan">搜索局域网内机顶盒</string>
    <string name="connect">连接</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确定删除？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="connecting">连接中...\n可能需要几分钟时间！</string>
    <string name="scanning">搜索中...\n%1$s</string>
    <string name="info_not_connect">还未连接机顶盒！</string>
    <string name="status_connected">已连接</string>
    <string name="status_not_connect">未连接</string>
    <string name="setting_server_count">设置机顶盒显示数量</string>
    <string name="setting_vibration">设置按键振动强度</string>
    <string name="setting_sensitivity">设置按键振动灵敏度</string>
    <string name="setting_push_common_count">设置常用显示数量</string>
    <string name="tv_name">请选择推送端TV</string>
    <string name="no_dmr">当前没有可推送的TV</string>
    <string name="no_commonlist">常用列表为空，请添加常用</string>
    <string name="levip">乐会员</string>
    <string name="youhuihuodong">优惠活动</string>
    <string name="vip_center">会员中心</string>
    <string name="le_pay">乐支付</string>
    <string name="info">详细信息</string>
    <string name="user_book">我的预定</string>
    <string name="user_past">消费记录</string>
    <string name="daijinquan">代金券</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="register"><u>注册</u></string>
    <string name="login">登陆</string>
    <string name="vip_youhui">会员优惠</string>
    <string name="name">姓         名:</string>
    <string name="zhengjian">证件类型:</string>
    <string name="phone">联系电话:</string>
    <string name="email">电子邮箱:</string>
    <string name="useraddress">通讯地址:</string>
    <string name="zhengjianhaoma">证件号码:</string>
    <string name="info_title">会员详细信息</string>
    <string name="order_info">账单详情</string>
    <string name="editnull">输入不能为空</string>
    <string name="emailerro">请输入正确邮箱地址</string>
    <string name="passworderro">密码不能为空</string>
    <string name="confim_password">请再次输入密码</string>
    <string name="confir_pay">确认支付</string>
    <string name="leshangwu">乐商务</string>
    <string name="search">搜索</string>
    <string name="collect">收藏</string>
    <string name="comment">点评</string>
    <string name="share">分享</string>
    <string name="yuding">预订</string>
    <string name="vipyuding">会员预订</string>
    <string name="person_num_hint">请输入人数</string>
    <string name="yuding_phone_edit_hint">请输入联系电话</string>
    <string name="yuding_beizhu_edit_hint">备注信息</string>
    <string name="comple_yuding">完成预订</string>
    <string name="goon_food_tag">继续点菜</string>
    <string name="add">添加</string>
    <string name="caidan">菜单</string>
    <string name="diancai">点菜</string>
    <string name="paystyle">支付方式:</string>
    <string name="hotel">酒店</string>
    <string name="restaurant">餐馆</string>
    <string name="sec_suijiama">根据电视画面提示选择正确的乐享验证码</string>
    <string name="downtitle">下载提示</string>
    <string name="download">下载</string>
    <string name="canel">取消</string>
    <string name="check_up">检查更新</string>
    <string name="al_new_ver">已是最新版本</string>
    <string name="le_shangjia">乐商家</string>
    <string name="finding">正在搜索</string>
    <string name="sharefr">分享给好友</string>
    <string name="leshare">乐分享</string>
    <string name="isshare">是否分享给好友?</string>
    <string name="connotice">是否进行连接</string>
    <string name="connectaction">com.luxshare.connect</string>
    <string name="finsh_toast">再按一次退出乐商务</string>
    <string name="opengpsnotice">提高位置经度</string>
    <string name="gpsmessage">是否开启GPS</string>
    <string name="nomorenotice">不再提醒我</string>
    <string name="main_pager">商户主页</string>

</resources>