<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_edit"
        android:layout_below="@+id/email_edit"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/login_register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_edit"
        android:layout_below="@+id/password_edit"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_register_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

</RelativeLayout>
