<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
             <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="姓       名:" />

        <TextView
            android:id="@+id/name_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/name_txt"
            android:layout_alignBottom="@+id/name_txt"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/name_txt"
            android:text="TextView" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/zhengjian_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/zhengjian" />

        <TextView
            android:id="@+id/zhengjian_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/zhengjian_txt"
            android:layout_alignBottom="@+id/zhengjian_txt"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/zhengjian_txt"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/zhengjiancode_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/zhengjianhaoma" />

        <TextView
            android:id="@+id/zhengjiancode_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/zhengjiancode_txt"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/zhengjiancode_txt"
            android:text="TextView" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/phone_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/phone_txt"
            android:layout_alignBottom="@+id/phone_txt"
            android:layout_marginLeft="33dp"
            android:layout_toRightOf="@+id/phone_txt"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/email_txt"
            android:layout_alignBottom="@+id/email_txt"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/email_txt"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/user_address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/useraddress" />

        <TextView
            android:id="@+id/user_address_txt_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/user_address_txt"
            android:layout_alignBottom="@+id/user_address_txt"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/user_address_txt"
            android:text="TextView" />

    </RelativeLayout>
            
            
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/info_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_title" >

        <TextView
            android:id="@+id/ac_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/info_title"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
