<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <ImageView
                android:id="@+id/business_head_info_hotel_img"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hotel" />

            <Button
                android:id="@+id/share_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="18dp"
                android:text="@string/share"
                android:textSize="12sp" />

            <Button
                android:id="@+id/shoucang_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/share_btn"
                android:layout_alignTop="@+id/business_head_info_hotel_img"
                android:text="@string/collect"
                android:textSize="12sp" />

            <Button
                android:id="@+id/comment_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/business_head_info_hotel_img"
                android:layout_alignRight="@+id/share_btn"
                android:text="@string/comment"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/business_head_address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="地址：Lasvgas" 
                android:autoLink="map"/>

            <TextView
                android:id="@+id/business_head_phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="电话:1888888888" 
                android:autoLink="phone"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
